<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fuser_profile"
    android:id="@+id/frag_user_profile"
    android:tag="frag_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" >

            <LinearLayout
                android:id="@+id/textFields"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:paddingTop="35dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name_box"
                    android:tag="Name"/>

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/cell_box"
                    android:tag="Cell"/>

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_box"
                    android:tag="Email"/>

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/company_box"
                    android:tag="Company"/>

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/website_box"
                    android:tag="Website"/>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button"
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="Save" />
    </LinearLayout>
</RelativeLayout>
